# knowdy-schemas

./: .gitignore  CMakeLists.txt  README.md  knowdy-schemas.spec.in
basic/: basic.gsl  building.gsl  color.gsl  communication.gsl  communication_channel.gsl  device.gsl  emotion.gsl  food.gsl  fruit.gsl  geo.gsl  geometry.gsl  index.gsl  lang.gsl  nature.gsl  network.gsl  other.gsl  person.gsl  physics.gsl  plant.gsl  proc.gsl  quant.gsl  substance.gsl  taste.gsl  temperature.gsl  time.gsl  toys.gsl  visual.gsl
basic/geo/: city.gsl  countries.gsl  index.gsl
basic/geometry/: index.gsl
basic/info/: biometrics.gsl  communication.gsl  content.gsl  document.gsl  formats.gsl  hardware.gsl  index.gsl  lang.gsl  network.gsl  policy.gsl  software.gsl  user.gsl
basic/math/: index.gsl
basic/organism/: fish.gsl  index.gsl
basic/proc/: command.gsl  communicate.gsl  index.gsl  mental.gsl  move.gsl  phase.gsl  possess.gsl  quant.gsl  sensory.gsl  social.gsl  timeflow.gsl
basic/proc/food/: index.gsl
basic/product/: building.gsl  clothing.gsl  container.gsl  food.gsl  game.gsl  index.gsl  media.gsl  tool.gsl  vehicle.gsl
basic/product/food/: apples.gsl  bread.gsl  fish.gsl  fruit.gsl  index.gsl  pastry.gsl  porridge.gsl  soup.gsl
basic/rels/: index.gsl
basic/social/: index.gsl  kinship.gsl
basic/social/economy/: index.gsl
